h1 align fix for grading, form padding, form-buttons alignment...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -554,3 +554,11 @@ input:focus, textarea#comment-area:focus, textarea:focus, input.form-control.sea
     border:1px solid #803a76;
     box-shadow: 0 0 10px #803a76;
 }
+
+.addarticle-form-row  form{
+    padding-right: 40px;
+}
+
+.addarticle-form-group-btns {
+
+}
